# deept-bice

./: README.md  pyproject.toml  search.py
configs/dataset/: shd.yaml  toy.yaml
configs/model/shd/: LIF.yaml  adLIF.yaml  adLmLIF.yaml  delayLIF.yaml  delayLmLIF.yaml  lmLIF.yaml
configs/model/toy/: toyWrapper.yaml
configs/workflow/: local.single_gpu.yaml
deept_bice/components/: modules.py  scores.py  seeker.py  spikoder.py
deept_bice/data/: shd.py  toy_dataset.py
deept_bice/models/: LIF.py  adLIF.py  adLmLIF.py  delayLIF.py  delayLmLIF.py  lmLIF.py  toyWrapper.py
tools/: analyze_search.py  extract_delays_from_delayLIF.py  plot_activity_of_spike_labels.py  plot_data_and_model_activity.py
